--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+    <script src="/js/Maths.js"></script>
     <script src="/js/game.js"></script>
     <script src="/js/material.js"></script>
     <script src="/js/init.js"></script>
